--- a/visly-todo-app/src/visly/components/SegmentedControl.css
+++ b/visly-todo-app/src/visly/components/SegmentedControl.css
@@ -2,16 +2,13 @@
 .__visly_segmented-control-root.__visly_scope_segmented-control-root {
   overflow: hidden;
   height: 32px;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
-  border-color: rgba(0, 0, 0, 1);
+  border-color: #000;
   border-width: 2px;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: #fff;
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: stretch;
   align-content: flex-start;
   justify-content: flex-start;
+  border-radius: 8px;
 }
