--- a/visly-todo-app/src/visly/components/Input.css
+++ b/visly-todo-app/src/visly/components/Input.css
@@ -3,31 +3,25 @@
   overflow: hidden;
   box-sizing: border-box;
   width: 100%;
-  height: 40px;
-  border-color: #000;
-  border-width: 2px;
+  height: 24px;
   background-color: transparent;
   align-items: center;
-  border-radius: 8px;
-  padding: 2px 30px 2px 8px;
-}
-.__visly_scope_ABzyCKqm1K_root.__visly_default.__visly_state_hover {
-  background-color: #fff;
+  padding: 0;
 }
 .__visly_scope_ABzyCKqm1K_root.__visly_default.__visly_state_focus {
-  border-color: #7b61ff;
   background-color: #fff;
 }
 .__visly_scope_ABzyCKqm1K_root .__visly_scope_ABzyCKqm1K_input::placeholder {
   color: #c5c5c5;
 }
 .__visly_scope_ABzyCKqm1K_root .__visly_scope_ABzyCKqm1K_input {
-  color: #000;
+  border: none;
+  color: #505050;
   font-family: Visly Roboto;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 20px;
+  line-height: 26px;
   width: 100%;
   flex-grow: 1;
   flex-shrink: 1;
