--- a/visly-todo-app/src/visly/components/reset.css
+++ b/visly-todo-app/src/visly/components/reset.css
@@ -1,5 +1,4 @@
 .__visly_reset {
-    margin: 0;
     padding: 0;
     border: 0;
     outline: none;
@@ -15,4 +14,14 @@
     line-height: 1;
     background-color: transparent;
     text-overflow: ellipsis;
+    text-transform: none;
+    list-style-type: none;
+}
+
+.__visly_reset > *:focus {
+    outline: none;
+}
+
+.__visly_reset::placeholder {
+    opacity: 1;
 }
